--- a/Beer/Views/Shared/_Layout.cshtml
+++ b/Beer/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Search", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("My Stock", "Index", "MyStock", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Add Recipe", "Index", "AddRecipe", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("My Stock", "MyStock", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Add Recipe", "AddEdit", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
