update working for parent object

--- a/Beer/Views/Home/AddEdit.cshtml
+++ b/Beer/Views/Home/AddEdit.cshtml
@@ -19,7 +19,7 @@
             <h2><span class="round-icon round-icon-recipe-yellow">@ViewBag.Title</span></h2>
         </div>
 
-        <form data-bind="submit: addRecipe" class="col-lg-8">
+        <form data-bind="submit: addEditRecipe" class="col-lg-8">
 
             <div class="form-group">
                 <label for="Source2" class="control-label">Source</label>
