--- a/Beer/Views/Home/AddEdit.cshtml
+++ b/Beer/Views/Home/AddEdit.cshtml
@@ -86,6 +86,12 @@
 
             </div>
             <div class="form-group">
+                <label for="MashTime" class="control-label">Batch Size</label>
+
+                <input type="text" class="form-control" id="BatchSize" data-bind="value:newRecipe().BatchSize" />
+
+            </div>
+            <div class="form-group">
                 <label for="MashTemp" class="control-label">MashTemp</label>
 
                 <input type="text" class="form-control" id="MashTemp" data-bind="value:newRecipe().MashTemp" />
@@ -98,13 +104,19 @@
 
             </div>
             <div class="form-group">
+                <label for="MashTemp" class="control-label">Boil TIme</label>
+
+                <input type="text" class="form-control" id="BoilTime" data-bind="value:newRecipe().BoilTime" />
+
+            </div>
+            <div class="form-group">
                 <label for="Fermentation" class="control-label">Fermentation</label>
 
                 <input type="text" class="form-control" id="Fermentation" data-bind="value:newRecipe().Fermentation" />
 
             </div>
             <div class="form-group">
-                <label for="Description" class="control-label">Decsription</label>
+                <label for="Description" class="control-label">Description</label>
 
                 <input type="text" class="form-control" id="Description" data-bind="value:newRecipe().Description" />
 
@@ -120,7 +132,7 @@
             <ul class="list-group">
 
                 <!-- ko foreach: newRecipe().Recipe_Malts -->
-                <li class="list-group-item form-inline">
+                <li class="list-group-item form-inline clearfix">
                     <div class="form-group no-margin">
                         <label data-bind="uniqueFor: MaltGenericID" class="control-label sr-only">Malt</label>
                     </div>
@@ -139,7 +151,7 @@
 
                 </li>
                 <!-- /ko -->
-                <li class="list-group-item no-border">
+                <li class="list-group-item no-border clearfix">
                     <div class="form-group">
                         <button data-bind="click: addMalt" class="btn btn-info">Add Malt</button>
                     </div>
@@ -149,7 +161,7 @@
             <h3><span class="round-icon round-icon-hop">Hops</span></h3>
             <ul class="list-group">
                 <!-- ko foreach: newRecipe().Recipe_Hops -->
-                <li class="list-group-item form-inline sm-select">
+                <li class="list-group-item form-inline sm-select clearfix">
                     <div class="form-group no-margin">
                         <label data-bind="uniqueFor: HopID" class="control-label sr-only">Hop</label>
                     </div>
@@ -201,7 +213,7 @@
                         <label data-bind="uniqueFor: StepID" class="control-label sr-only">Usage Time</label>
                     </div>
                     <select data-bind="options: $root.HopSteps.HopStep, optionsText: 'step', optionsValue : 'id', value: StepID, optionsCaption: 'Addition time', select2: {selection: StepID, closeOnSelect: true}, uniqueId: StepID" size="10" class="form-control"></select>
-                    <a href="#" class="pull-right item-delete" data-bind="click: $root.deleteOther, css: { enabled: $root.newRecipe().Recipe_Others().length > 1 }"><span class="glyphicon glyphicon-remove-sign"></span><span class="sr-only">Delete</span></a>
+                    <a href="#" class="pull-right item-delete enabled" data-bind="click: $root.deleteOther"><span class="glyphicon glyphicon-remove-sign"></span><span class="sr-only">Delete</span></a>
 
                 </li>
                 <!-- /ko -->
@@ -211,9 +223,15 @@
                     </div>
                 </li>
             </ul>
-            <div class="form-group">
+            <div class="form-group form-inline">
                 <button type="submit" class="btn btn-default">Save Recipe</button>
                 <button type="button" data-bind="click:test" class="btn btn-default">Test</button>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="scale" name="scale">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button" data-bind="click: scale">Scale</button>
+                    </span>
+                </div>
             </div>
         </form>
     </div>
